--- a/style.css
+++ b/style.css
@@ -453,7 +453,8 @@ p {
 	width: 400px;
 }
 #contact .contact-item {
-	background-color: #154F31;
+	  background-image: linear-gradient(to bottom right, #20DF90, #154F31);
+	
 	width: 80%;
 	padding: 20px;
 	text-align: center;
